[gd_scene load_steps=19 format=2]

[ext_resource path="res://multiplayer/lobby.gd" type="Script" id=1]
[ext_resource path="res://audio/background/main.ogg" type="AudioStream" id=2]
[ext_resource path="res://UI/background.png" type="Texture" id=3]
[ext_resource path="res://UI/Font.tres" type="DynamicFont" id=4]
[ext_resource path="res://sprites/Domino Effect Logo.png" type="Texture" id=5]
[ext_resource path="res://Nunito/Nunito-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://levels/LevelSelect.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/menubackground.jpg" type="Texture" id=8]
[ext_resource path="res://Menu/Menu.gd" type="Script" id=9]
[ext_resource path="res://sprites/character_sprites/faces/2.png" type="Texture" id=10]
[ext_resource path="res://Menu/Checklist.gd" type="Script" id=11]
[ext_resource path="res://LoadButton.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Nunito/waltograph42.otf"

[sub_resource type="DynamicFont" id=4]
size = 50
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Nunito/VeganStylePersonalUse-5Y58.ttf"

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = SubResource( 5 )

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 6 )

[node name="Menu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 9 )

[node name="MenuLayout" type="CanvasLayer" parent="."]
process_priority = 1

[node name="TextureRect" type="TextureRect" parent="MenuLayout"]
margin_left = 1.0
margin_top = 2.0
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 8 )
stretch_mode = 1

[node name="Polygon2D" type="Polygon2D" parent="MenuLayout/TextureRect"]
position = Vector2( 14.1569, 1.34081 )
scale = Vector2( 10.0784, 0.997758 )
color = Color( 0.0862745, 0.282353, 0.388235, 1 )
polygon = PoolVector2Array( -1.50389, 153.002, 100, 153, 100.198, 596.998, -2, 597 )

[node name="CreateGame" type="Button" parent="MenuLayout/TextureRect"]
margin_left = 4.0
margin_top = 159.0
margin_right = 95.0
margin_bottom = 179.0
grow_horizontal = 0
text = "Go To Lobby"

[node name="Checklist" type="Button" parent="MenuLayout/TextureRect"]
margin_left = 4.0
margin_top = 183.0
margin_right = 95.0
margin_bottom = 203.0
text = "Checklist"

[node name="TextureButton" type="TextureButton" parent="MenuLayout/TextureRect"]
margin_left = 911.0
margin_top = 26.0
margin_right = 989.0
margin_bottom = 117.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 10 )

[node name="Polygon2D2" type="Polygon2D" parent="MenuLayout/TextureRect"]
color = Color( 1, 0.898039, 0.682353, 1 )
polygon = PoolVector2Array( 0, 0, 0, 79, 0, 156, 725, 156, 724, -1 )

[node name="Label" type="Label" parent="MenuLayout/TextureRect/Polygon2D2"]
margin_left = 269.0
margin_top = 9.0
margin_right = 474.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Score Card"

[node name="Checklist" type="Control" parent="."]
margin_left = -1.0
margin_top = 2.0
margin_right = 1026.0
margin_bottom = 601.0
script = ExtResource( 11 )

[node name="CanvasLayer" type="CanvasLayer" parent="Checklist"]

[node name="Polygon2D" type="Polygon2D" parent="Checklist/CanvasLayer"]
position = Vector2( 0, 1 )
color = Color( 0.576471, 0.709804, 0.486275, 1 )
polygon = PoolVector2Array( 99, 154, 1022, 157, 1024, 599, 98, 599 )

[node name="VBoxContainer" type="VBoxContainer" parent="Checklist/CanvasLayer/Polygon2D"]
margin_left = 187.0
margin_top = 303.0
margin_right = 339.0
margin_bottom = 380.0

[node name="add_item" type="Button" parent="Checklist/CanvasLayer/Polygon2D"]
margin_left = 142.0
margin_top = 267.0
margin_right = 214.0
margin_bottom = 287.0
text = "Add Item"

[node name="WindowDialog" type="WindowDialog" parent="Checklist/CanvasLayer/Polygon2D/add_item"]
visible = true
margin_left = 209.0
margin_top = 66.0
margin_right = 551.0
margin_bottom = 216.0
window_title = "Rename Item"

[node name="MarginContainer" type="MarginContainer" parent="Checklist/CanvasLayer/Polygon2D/add_item/WindowDialog"]
margin_left = 9.0
margin_top = 14.0
margin_right = 334.0
margin_bottom = 137.0

[node name="VBoxContainer" type="VBoxContainer" parent="Checklist/CanvasLayer/Polygon2D/add_item/WindowDialog/MarginContainer"]
margin_right = 325.0
margin_bottom = 123.0

[node name="LineEdit" type="LineEdit" parent="Checklist/CanvasLayer/Polygon2D/add_item/WindowDialog/MarginContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 325.0
margin_bottom = 61.0
size_flags_horizontal = 7
size_flags_vertical = 6
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Confirm" type="Button" parent="Checklist/CanvasLayer/Polygon2D/add_item/WindowDialog/MarginContainer/VBoxContainer"]
margin_left = 131.0
margin_top = 103.0
margin_right = 193.0
margin_bottom = 123.0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Confirm"

[node name="remove_item" type="CheckBox" parent="Checklist/CanvasLayer/Polygon2D"]
margin_left = 239.0
margin_top = 267.0
margin_right = 354.0
margin_bottom = 291.0
text = "Remove Item"

[node name="Label" type="Label" parent="Checklist/CanvasLayer/Polygon2D"]
margin_left = 336.0
margin_top = 177.0
margin_right = 852.0
margin_bottom = 245.0
size_flags_stretch_ratio = 9.4
custom_fonts/font = SubResource( 6 )
text = "Community Checklist"

[node name="Lobby" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="Lobby"]
layer = -1
follow_viewport_enable = true

[node name="TextureRect" type="TextureRect" parent="Lobby/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 2.0
margin_right = 1.0
margin_bottom = 2.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true

[node name="TitleBox" type="Panel" parent="Lobby"]
anchor_left = 0.26
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 2 )

[node name="Title" type="Sprite" parent="Lobby/TitleBox"]
position = Vector2( 329.6, 287 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="Players" type="Panel" parent="Lobby"]
visible = false
anchor_left = 0.675
anchor_top = 0.5
anchor_right = 0.775
anchor_bottom = 0.5
margin_left = 636.0
margin_top = 85.0
margin_right = 888.0
margin_bottom = 440.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="Label" type="Label" parent="Lobby/Players"]
margin_left = 26.0
margin_top = 18.0
margin_right = 142.0
margin_bottom = 32.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Awaiting Players..."

[node name="Start" type="Button" parent="Lobby/Players"]
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
text = "START!"

[node name="List" type="ItemList" parent="Lobby/Players"]
anchor_left = 0.1
anchor_top = 0.125
anchor_right = 0.9
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="FindPublicIP" type="Label" parent="Lobby/Players"]
margin_left = 1.5
margin_top = -50.5
margin_right = 245.5
margin_bottom = -1.5
custom_fonts/font = SubResource( 1 )
text = "IP: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connect" type="Panel" parent="Lobby"]
anchor_left = 0.45
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 583.0
margin_top = 164.0
margin_right = 983.0
margin_bottom = 389.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 2 )

[node name="NameLabel" type="Label" parent="Lobby/Connect"]
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.2
grow_horizontal = 2
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
text = "Name:"
align = 3
valign = 3

[node name="IPLabel" type="Label" parent="Lobby/Connect"]
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = ExtResource( 4 )
text = "Host Name:"
align = 1
valign = 1

[node name="StartBox" type="Panel" parent="Lobby/Connect"]
anchor_left = 0.125
anchor_top = 0.25
anchor_right = 0.875
anchor_bottom = 0.25
margin_top = 5.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 2 )

[node name="Name" type="LineEdit" parent="Lobby/Connect/StartBox"]
margin_right = 200.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 4 )
text = "Player"

[node name="Host" type="Button" parent="Lobby/Connect/StartBox"]
anchor_left = 0.75
anchor_right = 1.0
margin_top = 2.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host"

[node name="ErrorLabel" type="Label" parent="Lobby/Connect"]
margin_left = 105.2
margin_top = 189.0
margin_right = 347.2
margin_bottom = 203.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0.820312, 0.291595, 0.291595, 1 )
align = 1

[node name="JoinBox" type="Panel" parent="Lobby/Connect"]
anchor_left = 0.125
anchor_top = 0.7
anchor_right = 0.875
anchor_bottom = 0.7
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 2 )

[node name="IPAddress" type="LineEdit" parent="Lobby/Connect/JoinBox"]
margin_right = 200.0
margin_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host Name"

[node name="Join" type="Button" parent="Lobby/Connect/JoinBox"]
anchor_left = 0.75
anchor_right = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"

[node name="ErrorDialog" type="AcceptDialog" parent="Lobby"]
visible = true
margin_left = 511.0
margin_top = 285.0
margin_right = 594.0
margin_bottom = 343.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Lobby"]
stream = ExtResource( 2 )
autoplay = true

[node name="LevelSelect" parent="Lobby" instance=ExtResource( 7 )]

[node name="Node" type="Node" parent="Lobby"]

[node name="LoadButton" parent="Lobby" instance=ExtResource( 12 )]
position = Vector2( 771, 50 )

[node name="Return" type="Button" parent="."]
margin_left = 757.0
margin_top = 490.0
margin_right = 870.0
margin_bottom = 534.0
text = "Return to Lobby"

[connection signal="pressed" from="MenuLayout/TextureRect/CreateGame" to="." method="_on_gotolobby_pressed"]
[connection signal="pressed" from="MenuLayout/TextureRect/Checklist" to="." method="_on_Checklist_pressed"]
[connection signal="pressed" from="Checklist/CanvasLayer/Polygon2D/add_item" to="Checklist" method="_on_add_item_pressed"]
[connection signal="text_changed" from="Checklist/CanvasLayer/Polygon2D/add_item/WindowDialog/MarginContainer/VBoxContainer/LineEdit" to="Checklist" method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="Checklist/CanvasLayer/Polygon2D/add_item/WindowDialog/MarginContainer/VBoxContainer/Confirm" to="Checklist" method="_on_Confirm_pressed"]
[connection signal="pressed" from="Checklist/CanvasLayer/Polygon2D/remove_item" to="Checklist" method="_on_remove_item_pressed"]
[connection signal="pressed" from="Lobby/Players/Start" to="Lobby" method="_on_start_pressed"]
[connection signal="pressed" from="Lobby/Connect/StartBox/Host" to="Lobby" method="_on_host_pressed"]
[connection signal="pressed" from="Lobby/Connect/JoinBox/Join" to="Lobby" method="_on_join_pressed"]
[connection signal="pressed" from="Lobby/LevelSelect/Popup/Level1" to="Lobby" method="_on_Level1_pressed"]
[connection signal="pressed" from="Lobby/LevelSelect/Popup/Level2" to="Lobby" method="_on_Level2_pressed"]
[connection signal="pressed" from="Lobby/LevelSelect/Popup/Level3" to="Lobby" method="_on_Level3_pressed"]
[connection signal="pressed" from="Lobby/LevelSelect/Popup/Level4" to="Lobby" method="_on_Level4_pressed"]
[connection signal="pressed" from="Return" to="." method="_on_Return_pressed"]

[editable path="Lobby/LevelSelect"]
